--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,5 +1,5 @@
 name: 'shopify'
-version: '0.19.0'
+version: '0.20.0'
 config-version: 2
 require-dbt-version: [">=1.3.0", "<2.0.0"]
 models:
@@ -111,3 +111,4 @@ vars:
     shopify_gql_order_discount_code: "{{ ref('stg_shopify_gql__order_discount_code') }}"
     shopify_gql_abandoned_checkout_shipping_line: "{{ ref('stg_shopify_gql__abandoned_checkout_shipping_line') }}"
     shopify_gql_fulfillment_event: "{{ ref('stg_shopify_gql__fulfillment_event') }}"
+    shopify_gql_fulfillment_order_line_item: "{{ ref('stg_shopify_gql__fulfillment_order_line_item') }}"
