--- a/packages.yml
+++ b/packages.yml
@@ -3,4 +3,4 @@ packages:
 #    version: [">=0.19.0", "<0.20.0"]
 # - local: ../ECommerce/Shopify/dbt_shopify_source
 - git: https://github.com/fivetran/dbt_shopify_source.git
-  revision: update/graphql
+  revision: update/graphql-jamie
