--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -14,7 +14,11 @@ vars:
   # shopify_using_all_metafields: true
   # shopify_using_discount_code_app: true
   # shopify_using_product_variant_media: true
-
+  # shopify_gql_using_discount_code_app: true # FALSE by default.
+  # shopify_gql_using_fulfillment_event: true # FALSE by default.
+  # shopify_gql_using_fulfillment_tracking_info: true # FALSE by default.  
+  # shopify_gql_using_product_variant_media: true # FALSE by default.
+  
   shopify_schema: shopify_integration_tests_17
   shopify_api_override: rest
 
